# mdedit

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README_GITHUB.md  beispiel.md  build.bat  build.sh  generate_pro.bat  install-icons.sh  install.sh  mdedit.desktop  setup_git.sh
.github/workflows/: build.yml
src/: MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  SplashScreen.cpp  SplashScreen.h  main.cpp
